# P1-projects

./: README.md  catraca.cpp  median.cpp  partition.cpp
t03-project-passgen-pancakes/: CMakeLists.txt  README.md  author.md
t03-project-passgen-pancakes/src/: entropy.cpp  functions.hpp  generator.cpp  groups.hpp  main.cpp  validate.cpp
t04-projeto-sloc-fallen/: CMakeLists.txt  README.md  author.md
t04-projeto-sloc-fallen/src/: funcs.cpp  funcs.hpp  main.cpp  sloc.cpp  sloc_types.hpp  validate.cpp
t05-projeto-bar-chart-race-compilamasnaoroda/: .gitignore  README.md  author.md  parameters.ini
t05-projeto-bar-chart-race-compilamasnaoroda/source/: CMakeLists.txt  main.cpp
t05-projeto-bar-chart-race-compilamasnaoroda/source/headers/: bar_chart.cpp  bar_chart.hpp  bcr_am.cpp  bcr_am.hpp  trim.hpp  validate.cpp  validate.hpp
t05-projeto-bar-chart-race-compilamasnaoroda/source/libs/: cities.txt
t06-projeto-sudoku-ehmolodoy/: CMakeLists.txt  README.md  author.md
t06-projeto-sudoku-ehmolodoy/lib/: tcolor.hpp
t06-projeto-sudoku-ehmolodoy/src/: CMakeLists.txt  arguments.cpp  arguments.hpp  board.cpp  board.hpp  main.cpp  sudoku_gm.cpp  sudoku_gm.hpp
t07-projeto-snaze-the_last_dance/: CMakeLists.txt  author.md
t07-projeto-snaze-the_last_dance/lib/: ai_controller.hpp  arguments.hpp  common.hpp  controller.hpp  game.hpp  level.hpp  player_controller.hpp  snake.hpp  tcolor.hpp
t07-projeto-snaze-the_last_dance/src/: ai_controller.cpp  arguments.cpp  game.cpp  level.cpp  main.cpp  player_controller.cpp  snake.cpp
